--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -5,6 +5,7 @@ $font-sans: "Rubik", Arial, sans-serif
 
 $fontsize-base: 1rem
 $fontsize-small: 0.85rem
+$fontsize-big: 1.5rem
 
 $color-brand-1: #184df1
 $color-text-black: #222
