--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,13 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
+import Why from '../components/Why.astro';
+import ServicesSection from '../components/ServicesSection.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<Header />
 	<Hero />
+	<ServicesSection />
+	<Why />
 </Layout>
