--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,16 @@
-<div class="c-header">
+---
+import TopNav from '../components/TopNav.astro';
+---
+
+<div class="Header">
   <div class="o-container">
-    <ul class="c-nav">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Works</a></li>
-      <li><a href="#">Testimonials</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <TopNav />
   </div>
 </div>
+
+<style lang="sass">
+  @use "../styles/variables"
+  .Header
+    padding-bottom: 1.5rem
+    padding-top: 1.5rem
+</style>
