--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
-import Hero from '../components/Hero.astro';
-import Why from '../components/Why.astro';
+import HeroSection from '../components/HeroSection.astro';
+import WhySection from '../components/WhySection.astro';
 import ServicesSection from '../components/ServicesSection.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<Header />
-	<Hero />
+	<HeroSection />
 	<ServicesSection />
-	<Why />
+	<WhySection />
 </Layout>
