--- a/src/components/WhyItem.astro
+++ b/src/components/WhyItem.astro
@@ -20,10 +20,10 @@ const { title, description } = Astro.props;
 <style lang="sass">
   @use '../styles/variables'  
   .WhyItem
-    border: 6px solid #dce2eb
     border-radius: 1rem
     padding: 1rem
-    color: variables.$color-text-black
+    color: variables.$color-text-white
+    background: variables.$color-brand-1
   .WhyItem__title
     font-size: variables.$fontsize-big
     font-weight: 700
