--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -32,9 +32,9 @@
     display: grid
     grid-template-columns: 2fr 1fr
     grid-gap: 2rem
-    background: #eee
+    background: variables.$color-bg-lightgrey
     padding: 2rem
-    border-radius: 1rem
+    border-radius: variables.$panel-radius
 
   .HeroSection__col
     padding-top: 1px
@@ -64,7 +64,7 @@
     margin-top: -10px
 
   .HeroSection__content
-    color: #333
+    color: variables.$color-text-darkgrey
     font-size: 1.4rem
 
   .HeroSection__content span
