--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -16,5 +16,5 @@
     margin-right: 1rem
     font-size: variables.$fontsize-small
   .TopNav a
-    color: black
+    color: variables.$color-text-darkgrey
 </style>
