--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Header from '../components/Header.astro';
 import HeroSection from '../components/HeroSection.astro';
 import WhySection from '../components/WhySection.astro';
 import ServicesSection from '../components/ServicesSection.astro';
+import PortfolioSection from '../components/PortfolioSection.astro';
+import TetimoSection from '../components/TetimoSection.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -11,4 +13,6 @@ import ServicesSection from '../components/ServicesSection.astro';
 	<HeroSection />
 	<ServicesSection />
 	<WhySection />
+	<PortfolioSection />
+	<TetimoSection />
 </Layout>
