--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -3,13 +3,19 @@ $breakpoint-sm: 640px
 
 $font-sans: "Rubik", Arial, sans-serif
 
-$fontsize-base: 1rem
 $fontsize-small: 0.85rem
+$fontsize-medium: 0.95rem
+$fontsize-base: 1rem
 $fontsize-big: 1.5rem
+$fontsize-bigger: 1.8rem
 
-$color-brand-1: #184df1
-$color-text-black: #222
-$color-text-white: #eee
+$color-black: #000
+$color-brand-1: #1864f1
+$color-text-black: #000
+$color-text-darkgrey: #404142
+$color-text-white: #fff
+$color-text-lightgrey: #ccc
+$color-bg-lightgrey: #eee
 
 
 
@@ -22,3 +28,5 @@ $rounded-big: 0.8rem
 $rounded-medium: 0.5rem
 $rounded-small: 0.25rem
 $container-max-width: 800px
+
+$panel-radius: 0.8rem
