--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -49,5 +49,9 @@ textarea
   margin: 0 auto
   padding: 0 1rem
 
+.o-section-title
+  font-size: variables.$fontsize-bigger
+  font-weight: 700
+  font-family: variables.$font-sans
 
 
