--- a/src/components/ServiceItem.astro
+++ b/src/components/ServiceItem.astro
@@ -14,6 +14,10 @@ const { title, description } = Astro.props;
 </div>
 
 <style lang="sass">
+  @use "../styles/variables"
+  .ServiceItem
+    color: variables.$color-text-darkgrey
   .ServiceItem__title
     margin-bottom: 0.5rem
+    color: variables.$color-text-black
 </style>
