--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -53,7 +53,7 @@ let services = [
     margin-top: 2rem
   .ServiceSection__box
     border: 6px solid #dce2eb
-    border-radius: 1rem
+    border-radius: variables.$panel-radius
     padding: 2rem
     color: variables.$color-text-black
   .ServiceSection__title
