--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import WhySection from '../components/WhySection.astro';
 import ServicesSection from '../components/ServicesSection.astro';
 import PortfolioSection from '../components/PortfolioSection.astro';
 import TetimoSection from '../components/TetimoSection.astro';
+import ContactSection from '../components/ContactSection.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -15,4 +17,6 @@ import TetimoSection from '../components/TetimoSection.astro';
 	<WhySection />
 	<PortfolioSection />
 	<TetimoSection />
+	<ContactSection />
+	<Footer />
 </Layout>
