--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,5 +1,5 @@
-$breakpoint-md: 740px
-$breakpoint-sm: 640px
+$breakpoint-lg: 700px
+$breakpoint-md: 640px
 
 $font-sans: "Rubik", Arial, sans-serif
 
@@ -17,16 +17,9 @@ $color-text-white: #fff
 $color-text-lightgrey: #ccc
 $color-bg-lightgrey: #eee
 
-
-
-
-
-$section-padding: 5rem
-$section-padding-mobile: 3rem
-
-$rounded-big: 0.8rem
-$rounded-medium: 0.5rem
-$rounded-small: 0.25rem
 $container-max-width: 800px
 
 $panel-radius: 0.8rem
+
+$panel-padding: 2rem
+$panel-padding-md: 1.5rem
