--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -23,6 +23,8 @@ import Form from '../components/Form.astro'
     border-radius: variables.$panel-radius
     color: variables.$color-text-white
     padding: variables.$panel-padding
+  .ContactSection__form
+    margin-top: 2rem
   
   @media screen and (max-width: variables.$breakpoint-lg)
     .ContactSection__box
