--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -33,8 +33,8 @@
       </div>
     </div>
     <div class="Form__cell">
-      <div class="Form__label">
-        ----
+      <div class="Form__label hide-on-mobile">
+        &nbsp;
       </div>
       <button type="submit" class="c-button-primary"> Send Message</button>
     </div>
@@ -69,4 +69,6 @@
     .Form__grid
       grid-auto-flow: row
       grid-gap: 1rem
+    .Form__label.hide-on-mobile
+      display: none
 </style>
