--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -23,6 +23,8 @@ import Form from '../components/Form.astro'
     border-radius: variables.$panel-radius
     color: variables.$color-text-white
     padding: variables.$panel-padding
+  .ContactSection__title
+    margin-bottom: 1rem
   .ContactSection__form
     margin-top: 2rem
   
