--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -20,6 +20,7 @@ $color-bg-lightgrey: #eee
 $container-max-width: 800px
 
 $panel-radius: 0.8rem
+$input-radius: 0.2rem
 
 $panel-padding: 2rem
 $panel-padding-md: 1.5rem
