--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import PortfolioSection from '../components/PortfolioSection.astro';
 import TetimoSection from '../components/TetimoSection.astro';
 import ContactSection from '../components/ContactSection.astro';
 import Footer from '../components/Footer.astro';
+import ModalMarkup from '../components/ModalMarkup.astro';
+import ModalScript from '../components/ModalScript.html';
 ---
 
 <Layout title="Hamdii">
@@ -19,4 +21,6 @@ import Footer from '../components/Footer.astro';
 	<TetimoSection />
 	<ContactSection />
 	<Footer />
+	<ModalMarkup />
+	<ModalScript />
 </Layout>
