--- a/src/components/ModalMarkup.astro
+++ b/src/components/ModalMarkup.astro
@@ -1,8 +1,60 @@
-<dialog data-mymodal class="c-modal">
-  <div class="c-modal__box">
-    <div class="c-modal__content" data-mymodal-content></div>
+<dialog data-mymodal class="Dialog">
+  <div class="Dialog__box">
+    <div class="Dialog__content" data-mymodal-content></div>
   </div>
-  <button data-close-btn class="c-modal__close">
+  <button data-close-btn class="Dialog__close">
     <img src="./assets/close.svg" alt="" />
   </button>
 </dialog>
+<style lang="sass">
+  @use "../styles/variables"
+
+  .Dialog
+    background: transparent
+    width: 100vw
+    height: 100vh
+    max-width: 100vw
+    max-height: 100vh
+    margin: 0
+    padding: 0
+    border: 0 none
+  .Dialog__box
+    background: #fff
+    box-shadow: 0 0 2rem rgba(0,0,0,0.5)
+    width: variables.$container-max-width
+    max-width: 90vw
+    margin: 1rem auto
+    color: variables.$color-text-black
+    border-radius: 0.5rem
+    overflow: hidden
+  .Dialog__content
+    padding: 2rem
+  .Dialog__close
+    position: fixed
+    top: 1rem
+    right: 2rem
+    cursor: pointer
+    width: 2rem
+    height: 2rem
+    background: white
+    border: 0 none
+    border-radius: 100%
+    display: block
+    box-shadow: 0 0 0.5rem rgba(0,0,0,0.5)
+  .Dialog__close:hover,
+  .Dialog__close:active
+    transform: scale(1.05)
+  .Dialog__close img
+    display: block
+
+  .Dialog::backdrop
+    background: rgba(0,0,0,0.8)
+
+  @media screen and (max-width: variables.$breakpoint-md)
+    .Dialog__close
+      top: 1rem
+      right: 1rem
+    .Dialog__content
+      padding: 1rem
+
+</style>
