Fixed form layout

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -29,7 +29,7 @@
         <label>Comments / Questions</label>
       </div>
       <div class="Form__control">
-        <textarea name="" rows="6"></textarea>
+        <textarea name=""></textarea>
       </div>
     </div>
     <div class="Form__cell">
@@ -59,8 +59,7 @@
     flex-direction: column
   .Form__cell.is-big
     grid-row: span 2
-  
-  .Form__cell.is-big .Form__control
+  .Form__control
     flex-grow: 1
   .Form__cell.is-big textarea
     min-height: 100%
@@ -69,6 +68,4 @@
     .Form__grid
       grid-auto-flow: row
       grid-gap: 1rem
-    .Form__label.hide-on-mobile
-      display: none
 </style>
